<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foundSong"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/border_search_item">

    <ImageView
        android:id="@+id/albumImg"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/albumImg"
        android:src="@drawable/album_icon_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deletebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/listen"
        android:layout_marginEnd="10dp"
        android:src="@drawable/delete_icon_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/SongName"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/albumImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/songAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/SongAuthor"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/albumImg"
        app:layout_constraintTop_toBottomOf="@+id/songName" />

</androidx.constraintlayout.widget.ConstraintLayout>