<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA500">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/songLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/border_song_player"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/albumImg"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/albumImg"
            android:src="@drawable/album_icon_32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/SongName"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/albumImg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/songAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/SongAuthor"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/albumImg"
            app:layout_constraintTop_toBottomOf="@+id/songName" />

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/listen"
            android:src="@drawable/play_icon_32"
            app:layout_constraintBottom_toTopOf="@+id/editbtn"
            app:layout_constraintEnd_toStartOf="@+id/nextTrackBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/nextTrackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/nextTrack"
            android:src="@drawable/nextmusic_icon_32"
            app:layout_constraintBottom_toTopOf="@+id/editbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/previousTrackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previousTrack"
            android:src="@drawable/previousmusic_icon_32"
            app:layout_constraintBottom_toTopOf="@+id/editbtn"
            app:layout_constraintEnd_toStartOf="@+id/playBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/editbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"
            android:src="@drawable/add_icon_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:fitsSystemWindows="true"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FFA500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemIconSize="28dp"
        app:menu="@menu/menu"
        app:itemIconTint="@color/black"
        style="@style/BottomNavStyle"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_manager"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/songLayout"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />
</androidx.constraintlayout.widget.ConstraintLayout>